--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,17 +1,3 @@
-/* .container {
-  max-width: 1200px;
-  margin: 0 auto;
-  min-height: 100vh;
-  background: #eee;
-  padding: 30px;
-}
-
-.posts {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-  gap: 30px;
-} */
-
 .container {
   min-height: 100vh;
   background: #eee;
@@ -22,4 +8,12 @@
   min-height: 100px;
   display: flex;
   align-items: flex-end;
+}
+
+.search-container {
+  margin-bottom: 30px;
+}
+
+.search-container h1 {
+  margin-bottom: 30px;
 }
